[package]
name = "pre-commit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.14"
globset = "0.4.8"
anyhow = "1.0.57"
colored = "2.0.0"
indicatif = "0.16.2"
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
clap = { version = "3.1.12", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
